@@ -77,6 +77,7 @@ public class Lwjgl3Application implements Lwjgl3ApplicationBase {
 	private static GLVersion glVersion;
 	private static Callback glDebugCallback;
 	private final Sync sync;
+	private boolean recreateWindow = false;
 
 	static void initializeGlfw () {
 		if (errorCallback == null) {
@@ -378,7 +379,7 @@ public class Lwjgl3Application implements Lwjgl3ApplicationBase {
 			return preferences.get(name);
 		} else {
 			Preferences prefs = new Lwjgl3Preferences(
-					new Lwjgl3FileHandle(new File(config.preferencesDirectory, name), config.preferencesFileType));
+				new Lwjgl3FileHandle(new File(config.preferencesDirectory, name), config.preferencesFileType));
 			preferences.put(name, prefs);
 			return prefs;
 		}
@@ -418,7 +419,7 @@ public class Lwjgl3Application implements Lwjgl3ApplicationBase {
 	@Override
 	public Lwjgl3Audio createAudio (Lwjgl3ApplicationConfiguration config) {
 		return new OpenALLwjgl3Audio(config.audioDeviceSimultaneousSources, config.audioDeviceBufferCount,
-				config.audioDeviceBufferSize);
+			config.audioDeviceBufferSize);
 	}
 
 	@Override
@@ -441,18 +442,25 @@ public class Lwjgl3Application implements Lwjgl3ApplicationBase {
 		return createWindow(appConfig, listener, windows.get(0).getWindowHandle(), true);
 	}
 
-	/**
-	 * Creates a new {@link Lwjgl3Window} using the already existing {@link Lwjgl3ApplicationConfiguration}
-	 * and {@link ApplicationListener} from the current window and replaces it. Mostly used when
-	 * some settings require the window to be created from scratch, such as MSAA sampling. */
-	public Lwjgl3Window recreateWindow() {
-		return recreateWindow(config);
+	/** Creates a new {@link Lwjgl3Window} using the already existing {@link Lwjgl3ApplicationConfiguration} and
+	 * {@link ApplicationListener} from the current window and replaces it. Mostly used when some settings require the window to be
+	 * created from scratch, such as MSAA sampling. */
+	public void recreateWindow () {
+		recreateWindow(config);
 	}
 
-	private Lwjgl3Window recreateWindow(Lwjgl3ApplicationConfiguration appConfig) {
-		//Some settings don't work, such as disableAudio, which would require the
-		//Gdx.audio object to be recreated. Changing window size this way is also not recommended
-		//as it can lead to really odd values being passed into the ApplicationListener.resize() method.
+	private void recreateWindow (Lwjgl3ApplicationConfiguration appConfig) {
+		// The createWindow() method adds the window in the array in postRunnable();
+		// because it's not instant we need this boolean to stop someone from calling
+		// recreateWindow() X amount of times, thus creating X windows.
+		if (recreateWindow) {
+			return;
+		}
+		recreateWindow = true;
+
+		// Some settings don't work, such as disableAudio, which would require the
+		// Gdx.audio object to be recreated. Changing window size this way is also not recommended
+		// as it can lead to really odd values being passed into the ApplicationListener.resize() method.
 		config.set(appConfig);
 
 		ApplicationListener listener = currentWindow.getListener();
@@ -462,15 +470,16 @@ public class Lwjgl3Application implements Lwjgl3ApplicationBase {
 		// the window may not be created immediately, meaning getInput() would return null and crash everything
 		postRunnable(new Runnable() {
 			@Override
-			public void run() {
+			public void run () {
 				recreatedWindow.getInput().setInputProcessor(inputProcessor);
+				// Now we can recreate the window again
+				recreateWindow = false;
 			}
 		});
-		return recreatedWindow;
 	}
 
 	private Lwjgl3Window createWindow (final Lwjgl3ApplicationConfiguration config, ApplicationListener listener,
-									   final long sharedContext, final boolean callCreateOnListener) {
+		final long sharedContext, final boolean callCreateOnListener) {
 		final Lwjgl3Window window = new Lwjgl3Window(listener, config, this);
 		if (sharedContext == 0) {
 			// the main window is created immediately
@@ -487,14 +496,15 @@ public class Lwjgl3Application implements Lwjgl3ApplicationBase {
 		return window;
 	}
 
-	void createWindow (Lwjgl3Window window, Lwjgl3ApplicationConfiguration config, long sharedContext, boolean callCreateOnListener) {
+	void createWindow (Lwjgl3Window window, Lwjgl3ApplicationConfiguration config, long sharedContext,
+		boolean callCreateOnListener) {
 		long windowHandle = createGlfwWindow(config, sharedContext);
 		window.create(windowHandle, callCreateOnListener);
 		window.setVisible(config.initialVisible);
 
 		for (int i = 0; i < 2; i++) {
 			GL11.glClearColor(config.initialBackgroundColor.r, config.initialBackgroundColor.g, config.initialBackgroundColor.b,
-					config.initialBackgroundColor.a);
+				config.initialBackgroundColor.a);
 			GL11.glClear(GL11.GL_COLOR_BUFFER_BIT);
 			GLFW.glfwSwapBuffers(windowHandle);
 		}
@@ -547,7 +557,7 @@ public class Lwjgl3Application implements Lwjgl3ApplicationBase {
 		if (config.fullscreenMode != null) {
 			GLFW.glfwWindowHint(GLFW.GLFW_REFRESH_RATE, config.fullscreenMode.refreshRate);
 			windowHandle = GLFW.glfwCreateWindow(config.fullscreenMode.width, config.fullscreenMode.height, config.title,
-					config.fullscreenMode.getMonitor(), sharedContextWindow);
+				config.fullscreenMode.getMonitor(), sharedContextWindow);
 		} else {
 			GLFW.glfwWindowHint(GLFW.GLFW_DECORATED, config.windowDecorated ? GLFW.GLFW_TRUE : GLFW.GLFW_FALSE);
 			windowHandle = GLFW.glfwCreateWindow(config.windowWidth, config.windowHeight, config.title, 0, sharedContextWindow);
@@ -556,7 +566,7 @@ public class Lwjgl3Application implements Lwjgl3ApplicationBase {
 			throw new GdxRuntimeException("Couldn't create window");
 		}
 		Lwjgl3Window.setSizeLimits(windowHandle, config.windowMinWidth, config.windowMinHeight, config.windowMaxWidth,
-				config.windowMaxHeight);
+			config.windowMaxHeight);
 		if (config.fullscreenMode == null) {
 			if (config.windowX == -1 && config.windowY == -1) {
 				int windowWidth = Math.max(config.windowWidth, config.windowMinWidth);
@@ -576,7 +586,7 @@ public class Lwjgl3Application implements Lwjgl3ApplicationBase {
 				GLFW.glfwGetMonitorWorkarea(monitorHandle, areaXPos, areaYPos, areaWidth, areaHeight);
 
 				GLFW.glfwSetWindowPos(windowHandle, Math.max(0, areaXPos.get(0) + areaWidth.get(0) / 2 - windowWidth / 2),
-						Math.max(0, areaYPos.get(0) + areaHeight.get(0) / 2 - windowHeight / 2));
+					Math.max(0, areaYPos.get(0) + areaHeight.get(0) / 2 - windowHeight / 2));
 			} else {
 				GLFW.glfwSetWindowPos(windowHandle, config.windowX, config.windowY);
 			}
@@ -604,11 +614,11 @@ public class Lwjgl3Application implements Lwjgl3ApplicationBase {
 		initiateGL(config.glEmulation == Lwjgl3ApplicationConfiguration.GLEmulation.ANGLE_GLES20);
 		if (!glVersion.isVersionEqualToOrHigher(2, 0))
 			throw new GdxRuntimeException("OpenGL 2.0 or higher with the FBO extension is required. OpenGL version: "
-					+ GL11.glGetString(GL11.GL_VERSION) + "\n" + glVersion.getDebugVersionString());
+				+ GL11.glGetString(GL11.GL_VERSION) + "\n" + glVersion.getDebugVersionString());
 
 		if (config.glEmulation != Lwjgl3ApplicationConfiguration.GLEmulation.ANGLE_GLES20 && !supportsFBO()) {
 			throw new GdxRuntimeException("OpenGL 2.0 or higher with the FBO extension is required. OpenGL version: "
-					+ GL11.glGetString(GL11.GL_VERSION) + ", FBO extension: false\n" + glVersion.getDebugVersionString());
+				+ GL11.glGetString(GL11.GL_VERSION) + ", FBO extension: false\n" + glVersion.getDebugVersionString());
 		}
 
 		if (config.debug) {
@@ -642,16 +652,16 @@ public class Lwjgl3Application implements Lwjgl3ApplicationBase {
 	private static boolean supportsFBO () {
 		// FBO is in core since OpenGL 3.0, see https://www.opengl.org/wiki/Framebuffer_Object
 		return glVersion.isVersionEqualToOrHigher(3, 0) || GLFW.glfwExtensionSupported("GL_EXT_framebuffer_object")
-				|| GLFW.glfwExtensionSupported("GL_ARB_framebuffer_object");
+			|| GLFW.glfwExtensionSupported("GL_ARB_framebuffer_object");
 	}
 
 	public enum GLDebugMessageSeverity {
 		HIGH(GL43.GL_DEBUG_SEVERITY_HIGH, KHRDebug.GL_DEBUG_SEVERITY_HIGH, ARBDebugOutput.GL_DEBUG_SEVERITY_HIGH_ARB,
-				AMDDebugOutput.GL_DEBUG_SEVERITY_HIGH_AMD), MEDIUM(GL43.GL_DEBUG_SEVERITY_MEDIUM, KHRDebug.GL_DEBUG_SEVERITY_MEDIUM,
+			AMDDebugOutput.GL_DEBUG_SEVERITY_HIGH_AMD), MEDIUM(GL43.GL_DEBUG_SEVERITY_MEDIUM, KHRDebug.GL_DEBUG_SEVERITY_MEDIUM,
 				ARBDebugOutput.GL_DEBUG_SEVERITY_MEDIUM_ARB, AMDDebugOutput.GL_DEBUG_SEVERITY_MEDIUM_AMD), LOW(
-				GL43.GL_DEBUG_SEVERITY_LOW, KHRDebug.GL_DEBUG_SEVERITY_LOW, ARBDebugOutput.GL_DEBUG_SEVERITY_LOW_ARB,
-				AMDDebugOutput.GL_DEBUG_SEVERITY_LOW_AMD), NOTIFICATION(GL43.GL_DEBUG_SEVERITY_NOTIFICATION,
-				KHRDebug.GL_DEBUG_SEVERITY_NOTIFICATION, -1, -1);
+					GL43.GL_DEBUG_SEVERITY_LOW, KHRDebug.GL_DEBUG_SEVERITY_LOW, ARBDebugOutput.GL_DEBUG_SEVERITY_LOW_ARB,
+					AMDDebugOutput.GL_DEBUG_SEVERITY_LOW_AMD), NOTIFICATION(GL43.GL_DEBUG_SEVERITY_NOTIFICATION,
+						KHRDebug.GL_DEBUG_SEVERITY_NOTIFICATION, -1, -1);
 
 		final int gl43, khr, arb, amd;
 
